added letter to number mode

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
   <body>
     <main>
       <nav>
-        <a href="speed-mode.html">1+1 speed</a>
-        <a href="practice-mode.html">1+1 practice</a>
+        <a href="addition/index.html">1+1</a>
+        <a href="letter-to-number/index.html">A -> 0</a>
+        <a href="number-to-letter.html">0 -> A</a>
         <a href="highscores.html">highscores</a>
       </nav>
     </main>
