--- a/highscores.html
+++ b/highscores.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Music notation trainer</title>
     <link rel="stylesheet" href="styles.css">
-	  <script src="scripts/highscores.js" type="module" defer></script>
+	  <script src="addition/highscores.js" type="module" defer></script>
   </head>
   <body>
     <main>
