--- a/letter-to-number/index.html
+++ b/letter-to-number/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Music notation trainer</title>
-    <link rel="stylesheet" href="styles.css">
-	  <script src="scripts/speed-mode.js" type="module" defer></script>
+    <link rel="stylesheet" href="../styles.css">
+	  <script src="index.js" type="module" defer></script>
   </head>
   <body>
     <main>
       <div class="back-button">
-        <a href="index.html">&lt; back</a>
+        <a href="../index.html">&lt; back</a>
       </div>
       <div class="number-section">
         <div id="problemDiv" class="problem"></div>
