--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <nav>
         <a href="addition/index.html">1+1</a>
         <a href="letter-to-number/index.html">A -> 0</a>
-        <a href="number-to-letter.html">0 -> A</a>
+        <a href="number-to-letter/index.html">0 -> A</a>
         <a href="highscores.html">highscores</a>
       </nav>
     </main>
