--- a/addition/results.html
+++ b/addition/results.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Music notation trainer</title>
-    <link rel="stylesheet" href="styles.css">
-	  <script src="addition/highscores.js" type="module" defer></script>
+    <link rel="stylesheet" href="../styles.css">
+	  <script src="./results.js" type="module" defer></script>
   </head>
   <body>
     <main>
       <div class="back-button">
-        <a href="index.html">&lt; back</a>
+        <a href="../index.html">&lt; back</a>
       </div>
       <div id="scoreDiv"></div>
     </main>
