--- a/letter-to-number/results.html
+++ b/letter-to-number/results.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Music notation trainer</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
+	  <script src="./results.js" type="module" defer></script>
   </head>
   <body>
     <main>
-      <nav>
-        <a href="addition/index.html">1+1</a>
-        <a href="letter-to-number/index.html">A → 0</a>
-        <a href="number-to-letter/index.html">0 → A</a>
-      </nav>
+      <div class="back-button">
+        <a href="../index.html">&lt; back</a>
+      </div>
+      <div id="scoreDiv"></div>
     </main>
   </body>
 </html>
